Controller edits + preliminary Taskr (#294)
* Feedback for controllers

* Add preliminary taskr

* Restore start and set setpoint

* Change name

* Clean up

* Remove unneeded python setup

* Remove unneeded preempt check

* Using temporary params, make sure that the servoer doesn't return until it reaches its goal (Justin was right Jana was wrong)

* Clean up and apply feedback

* Fix bug in controls update loop and properly load commands

--- a/catkin_ws/src/controls/CMakeLists.txt
+++ b/catkin_ws/src/controls/CMakeLists.txt
@@ -11,6 +11,9 @@ find_package(catkin REQUIRED COMPONENTS
   actionlib
 )
 
+catkin_python_setup()
+
+
 add_action_files(DIRECTORY
     action FILES
         GoToDepth.action
@@ -20,6 +23,16 @@ generate_messages(DEPENDENCIES
     geometry_msgs
     std_msgs
     actionlib_msgs
+)
+
+catkin_package(
+  CATKIN_DEPENDS
+    rospy
+    std_msgs
+    auv_msgs
+    geometry_msgs
+    actionlib_msgs
+    actionlib
 )
 
 add_subdirectory(test)
