--- a/catkin_ws/src/controls/package.xml
+++ b/catkin_ws/src/controls/package.xml
@@ -14,6 +14,7 @@
   <build_depend>auv_msgs</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
 
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
@@ -21,6 +22,7 @@
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>teleop_twist_joy</run_depend>
+  <run_depend>geometry_msgs</run_depend>
 
   <export>
   </export>
