--- a/catkin_ws/src/taskr/package.xml
+++ b/catkin_ws/src/taskr/package.xml
@@ -16,6 +16,7 @@
   <build_depend>std_msgs</build_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
+  <run_depend>controls</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
