--- a/catkin_ws/src/taskr/config/tasks.yaml
+++ b/catkin_ws/src/taskr/config/tasks.yaml
@@ -41,7 +41,7 @@ octagon:
 # Represents any series of actions for testing purposes.
 square:
   actions:
+    - maintain_yaw: 0.0
     - maintain_depth: 1.0
-    # - maintain_yaw: 0.0
     - move:
         distance: 10.0
