--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "catkin_ws/src/pointgrey_camera_driver"]
 	path = catkin_ws/src/pointgrey_camera_driver
 	url = https://github.com/ros-drivers/pointgrey_camera_driver.git
+[submodule "catkin_ws/darknet_ros"]
+	path = catkin_ws/darknet_ros
+	url = https://github.com/leggedrobotics/darknet_ros.git
