--- a/catkin_ws/src/auv_base/config/auv.yml
+++ b/catkin_ws/src/auv_base/config/auv.yml
@@ -6,20 +6,26 @@ root: /home/robotics/auv
 pre: export SHELL=/bin/zsh && export PATH=/usr/local/sbin/:/usr/local/bin/:/usr/sbin:${PATH}:/sbin:/usr/games:/usr/local/games
 
 windows:
-    - core: roscore
-    - serial: roslaunch arduino teensy.launch --wait
+    - core:
+        panes:
+          - roscore
+          - roslaunch state_estimation state_estimation.launch --wait
+          - roslaunch controls controls.launch --wait
+    - serial:
+        panes:
+          - roslaunch arduino teensy.launch --wait
+          - roslaunch hydrophones hydrophones.launch --wait
+          - roslaunch tritech_micron tritech_micron.launch --wait
+          - roslaunch sonar_proc sonar_proc.launch --wait
     - cameras:
         panes:
           - roslaunch auv_base camera_front.launch --wait
           - roslaunch auv_base camera_down.launch --wait
-    - sonar:
+    - status:
         panes:
-          - roslaunch tritech_micron tritech_micron.launch --wait
-          - roslaunch sonar_proc sonar_proc.launch --wait
-    - state_estimation: roslaunch state_estimation state_estimation.launch --wait
-    - controls: roslaunch controls controls.launch --wait
-    - status: roslaunch status status.launch --wait --screen
-    - planner: roslaunch planner planner.launch --wait
-    - taskr: roslaunch taskr taskr.launch --wait
-    - hydrophones: roslaunch hydrophones hydrophones.launch --wait
-    - auto_shutdown: rosrun status auto_shutdown
+          - roslaunch status status.launch --wait --screen
+          - rosrun status auto_shutdown
+    - planner:
+        panes:
+          - roslaunch planner planner.launch --wait
+          - roslaunch taskr taskr.launch --wait
