--- a/catkin_ws/src/hydrophones/package.xml
+++ b/catkin_ws/src/hydrophones/package.xml
@@ -11,10 +11,13 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <test_depend>unittest</test_depend>
+
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>nucleo</run_depend>
+  <run_depend>python-scipy</run_depend>
+
+  <test_depend>unittest</test_depend>
 </package>
