--- a/catkin_ws/src/sonar_proc/package.xml
+++ b/catkin_ws/src/sonar_proc/package.xml
@@ -21,4 +21,6 @@
   <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+
+  <exec_depend>python-sklearn</exec_depend>
 </package>
