--- a/catkin_ws/src/nucleo/package.xml
+++ b/catkin_ws/src/nucleo/package.xml
@@ -10,4 +10,5 @@
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>gcc-arm-none-eabi</build_depend>
 </package>
