--- a/catkin_ws/src/state_estimation/detectors/CMakeLists.txt
+++ b/catkin_ws/src/state_estimation/detectors/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(lane_detector lane_detector.cpp)
-add_executable(torpedo_target torpedoTargeter.cpp)
+add_executable(torpedo_target torpedo_targeter.cpp)
 
 target_link_libraries(lane_detector ${catkin_LIBRARIES})
 target_link_libraries(torpedo_target ${catkin_LIBRARIES})
