Fix import issue with action msgs

--- a/catkin_ws/src/auv_msgs/CMakeLists.txt
+++ b/catkin_ws/src/auv_msgs/CMakeLists.txt
@@ -46,6 +46,7 @@ add_action_files(
   FILES
     SetVelocity.action  # Deprecated
     InitializeHorizon.action
+    Hydrophones.action
 )
 
 generate_messages(DEPENDENCIES
