Do a shallow clone of darknet submodule
Shallow clones only fetch the latest commit. Added because darknet was timing
out on the builds. See
https://github.com/git/git/commit/f6fb30a01d2373f36cbf2054be9ae1bf65475794
for more info

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,7 @@
 [submodule "catkin_ws/src/darknet_ros"]
 	path = catkin_ws/src/darknet_ros
 	url = git@github.com:leggedrobotics/darknet_ros.git
+	shallow = true
 [submodule "catkin_ws/src/rosserial"]
 	path = catkin_ws/src/rosserial
 	url = git@github.com:mcgill-robotics/rosserial.git
