--- a/catkin_ws/src/state_estimation/package.xml
+++ b/catkin_ws/src/state_estimation/package.xml
@@ -18,6 +18,7 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>tf2</build_depend>
   <build_depend>boost</build_depend>
   <build_depend>auv_msgs</build_depend>
   <build_depend>angles</build_depend>
@@ -36,6 +37,7 @@
   <run_depend>nav_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>tf2</run_depend>
   <run_depend>boost</run_depend>
   <run_depend>auv_msgs</run_depend>
   <run_depend>angles</run_depend>
