Squashed commit of the following:
    commit b696781df5dd74e09e95d377f5f769bba7e12f4f
    Merge: be0f43f bd1f054
    Author: Jeremy <jgomallette@gmail.com>
    Date:   Thu May 17 19:34:59 2018 -0400

        Resolve tmux conflicts

    commit be0f43fa6876af4579a7085b460532fadc21b59a
    Author: Jeremy <jgomallette@gmail.com>
    Date:   Thu May 17 19:27:22 2018 -0400

        Remove format.sh (function moved to tools.sh)

    commit 926d806dd7ffd9302094e3154680da5e463c45b8
    Author: Bei Chen Liu <bei.liu@mail.mcgill.ca>
    Date:   Thu May 17 18:58:16 2018 -0400

        Change the board type for depth sensor

    commit d7564ab0034586b3143282cc0bc3e28ec46b4c15
    Author: Bei Chen Liu <bei.liu@mail.mcgill.ca>
    Date:   Thu May 17 18:54:15 2018 -0400

        Add Adafruit Feather udev rules

    commit bd1f054f1517f32c20e75f53359f93e4f2192943
    Merge: f344e1b 0f95ee1
    Author: Jeremy Mallette <jgomallette@gmail.com>
    Date:   Thu May 17 18:35:40 2018 -0400

        Merge pull request #359 from mcgill-robotics/setup/tmuxinator

        Setup/tmuxinator

    commit 0f95ee158345b47ba8e6840af27a2e2f8392fd68
    Merge: 1499d67 f344e1b
    Author: Jeremy Mallette <jgomallette@gmail.com>
    Date:   Thu May 17 18:32:01 2018 -0400

        Merge branch 'dev' into setup/tmuxinator

    commit 20ff25279018a3848135ea37287f3c52b43547db
    Author: McGill Robotics <dev@mcgillrobotics.com>
    Date:   Tue May 15 18:32:20 2018 -0400

        Bump dcdc_nuc to master

    commit 0935ae0a799af0322e0ee0a00d486a05d7f7f03a
    Author: McGill Robotics <dev@mcgillrobotics.com>
    Date:   Tue May 15 18:27:39 2018 -0400

        Add working thruster code

    commit 4989a4ad05ac5835e19a57a69503c12653dd0e13
    Author: McGill Robotics <dev@mcgillrobotics.com>
    Date:   Sun Apr 1 19:37:45 2018 -0400

        Add udev rule for dvl

    commit 2310332e8c54a10e853895e5ff95d05e32cdd9e7
    Author: Justin Bell <justin.bell@mail.mcgill.ca>
    Date:   Sat Mar 31 13:38:02 2018 -0400

  

--- a/catkin_ws/src/arduino/CMakeLists.txt
+++ b/catkin_ws/src/arduino/CMakeLists.txt
@@ -2,44 +2,35 @@ cmake_minimum_required(VERSION 2.8.3)
 project(arduino)
 
 find_package(catkin REQUIRED COMPONENTS
-  rosserial_client
+  auv_msgs
+  message_generation
+  roscpp
   rosserial_arduino
+  rosserial_client
+  std_msgs
 )
 
-catkin_package(
-  DEPENDS auv_msgs
+catkin_package(CATKIN_DEPENDS
+  auv_msgs
+  std_msgs
 )
 
-set(BACKUP_PROJECT_BINARY_DIR ${PROJECT_BINARY_DIR})
-set(PROJECT_WORKSPACE_DIR "${PROJECT_BINARY_DIR}/workspace")
-set(PROJECT_LIBRARY_DIR "${PROJECT_WORKSPACE_DIR}/libraries")
-# We want the files from rosserial generate to go in a slightly different folder.
-set(PROJECT_BINARY_DIR ${PROJECT_LIBRARY_DIR})
 rosserial_generate_ros_lib(
   PACKAGE rosserial_arduino
   SCRIPT make_libraries.py
 )
-set(PROJECT_BINARY_DIR ${BACKUP_PROJECT_BINARY_DIR})
 
-# The ros_lib has to be deleted before generating a new one.
-add_custom_target(
-  delete_${PROJECT_NAME}_ros_lib
-  COMMAND rm -rf ${PROJECT_LIBRARY_DIR}
+rosserial_configure_client(
+  DIRECTORY thrusters
+  TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
 )
 
-add_custom_target(
-  link_ino_files
-  COMMAND mkdir -p ${PROJECT_WORKSPACE_DIR}
-  COMMAND ln -sf ${PROJECT_SOURCE_DIR}/blinky ${PROJECT_WORKSPACE_DIR}
-  COMMAND ln -sf ${PROJECT_SOURCE_DIR}/radio_interrupt ${PROJECT_WORKSPACE_DIR}
-  COMMAND ln -sf ${PROJECT_SOURCE_DIR}/teensy ${PROJECT_WORKSPACE_DIR}
-  COMMAND ln -sf ${PROJECT_SOURCE_DIR}/teensy_depth ${PROJECT_WORKSPACE_DIR}
+rosserial_add_client_target(thrusters firmware ALL)
+rosserial_add_client_target(thrusters firmware-upload)
+
+rosserial_configure_client(
+  DIRECTORY depth
+  TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
 )
 
-add_dependencies(
-  ${PROJECT_NAME}_ros_lib
-  delete_${PROJECT_NAME}_ros_lib 
-  link_ino_files
-  auv_msgs_genpy
-)
-
+rosserial_add_client_target(depth firmware ALL)
