--- a/catkin_ws/src/auv_msgs/CMakeLists.txt
+++ b/catkin_ws/src/auv_msgs/CMakeLists.txt
@@ -2,18 +2,20 @@ cmake_minimum_required(VERSION 2.8.3)
 project(auv_msgs)
 
 find_package(catkin REQUIRED COMPONENTS
-  message_generation
   actionlib_msgs
-  std_msgs
-  sensor_msgs
   geometry_msgs
+  message_generation
+  sensor_msgs
+  std_msgs
 )
 
 add_message_files(
   FILES
   # Added by Controls
   MotorCommands.msg
+  ThrusterCommands.msg
   SolenoidCommands.msg
+  PneumaticCommands.msg
   SetVelocity.msg
 
   # Added by State Estimation
@@ -37,23 +39,29 @@ add_message_files(
 
 add_service_files(FILES
   ConfidenceRadius.srv
-  XYConfidenceRadius.srv
   Covariance.srv
+  XYConfidenceRadius.srv
 )
 
 add_action_files(
   DIRECTORY action
   FILES
-    SetVelocity.action  # Deprecated
-    InitializeHorizon.action
     Hydrophones.action
+    InitializeHorizon.action
+    SetVelocity.action  # Deprecated
 )
 
 generate_messages(DEPENDENCIES
     actionlib_msgs
-    std_msgs
     geometry_msgs
     sensor_msgs
+    std_msgs
 )
 
-catkin_package(CATKIN_DEPENDS message_runtime actionlib_msgs)
+catkin_package(CATKIN_DEPENDS
+  actionlib_msgs
+  geometry_msgs
+  message_runtime
+  sensor_msgs
+  std_msgs
+)
