--- a/catkin_ws/src/cv/CMakeLists.txt
+++ b/catkin_ws/src/cv/CMakeLists.txt
@@ -2,9 +2,11 @@ cmake_minimum_required(VERSION 2.8.3)
 project(cv)
 
 find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  std_msgs
+)
+
+catkin_package(CATKIN_DEPENDS
+  pointgrey_camera_driver
+  tf
 )
 
 include_directories(
