--- a/catkin_ws/src/arduino/package.xml
+++ b/catkin_ws/src/arduino/package.xml
@@ -2,21 +2,20 @@
 <package>
   <name>arduino</name>
   <version>0.0.0</version>
-  <description>The arduino package</description>
+  <description>AUV arduino microcontroller package</description>
 
-  <maintainer email="maxkrogius@gmail.com">Max Krogius</maintainer>
+  <maintainer email="bei.liu@mail.mcgill.ca">Bei Chen Liu</maintainer>
 
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>GPLv2</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rosserial_client</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>rosserial_arduino</build_depend>
+  <build_depend>rosserial_client</build_depend>
   <build_depend>auv_msgs</build_depend>
-  <run_depend>rosserial_client</run_depend>
-  <run_depend>rosserial_arduino</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>auv_msgs</run_depend>
   <run_depend>rosserial_python</run_depend>
 </package>
