--- a/catkin_ws/src/arduino/package.xml
+++ b/catkin_ws/src/arduino/package.xml
@@ -15,6 +15,7 @@
   <build_depend>rosserial_arduino</build_depend>
   <build_depend>rosserial_client</build_depend>
   <build_depend>auv_msgs</build_depend>
+  <build_depend>sonar_proc</build_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>auv_msgs</run_depend>
   <run_depend>rosserial_python</run_depend>
