Drytest updates and bugfixes

--- a/catkin_ws/src/tools/config/drytest.yaml
+++ b/catkin_ws/src/tools/config/drytest.yaml
@@ -23,4 +23,4 @@ cameras:
   - name: 'Front Camera'
     topic: '/camera_front/image_raw'
   - name: 'Down Camera'
-    topic: '/camera_front/image_raw'
+    topic: '/camera_down/image_raw'
