--- a/catkin_ws/src/controls/package.xml
+++ b/catkin_ws/src/controls/package.xml
@@ -9,6 +9,7 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>cv</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>auv_msgs</build_depend>
@@ -16,6 +17,7 @@
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
 
+  <run_depend>cv</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>auv_msgs</run_depend>
