Update package.xml and CMakeLists

--- a/catkin_ws/src/controls/CMakeLists.txt
+++ b/catkin_ws/src/controls/CMakeLists.txt
@@ -2,37 +2,39 @@ cmake_minimum_required(VERSION 2.8.3)
 project(controls)
 
 find_package(catkin REQUIRED COMPONENTS
+  auv_msgs
+  actionlib
+  actionlib_msgs
+  genmsg
+  geometry_msgs
   rospy
   std_msgs
-  auv_msgs
-  geometry_msgs
-  genmsg
-  actionlib_msgs
-  actionlib
+  tf
+  teleop_twist_joy
 )
 
 catkin_python_setup()
 
-
-add_action_files(DIRECTORY
-    action FILES
-        GoToDepth.action
-)
-
-generate_messages(DEPENDENCIES
-    geometry_msgs
-    std_msgs
-    actionlib_msgs
-)
+# generate_messages(DEPENDENCIES
+#     geometry_msgs
+#     std_msgs
+#     actionlib_msgs
+# )
 
 catkin_package(
   CATKIN_DEPENDS
-    rospy
-    std_msgs
-    auv_msgs
-    geometry_msgs
-    actionlib_msgs
-    actionlib
+  auv_msgs
+  actionlib
+  actionlib_msgs
+  genmsg
+  geometry_msgs
+  rospy
+  std_msgs
+  tf
+  teleop_twist_joy
 )
+
+# catkin_install_python(PROGRAMS none
+#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 add_subdirectory(test)
