--- a/catkin_ws/src/cv/package.xml
+++ b/catkin_ws/src/cv/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>cv</name>
   <version>0.0.0</version>
   <description>The cv package</description>
@@ -7,9 +7,10 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>pointgrey_camera_driver</run_depend>
+  <depend>geometry_msgs</depend>
+  <depend>message_generation</depend>
+  <depend>pointgrey_camera_driver</depend>
+  <depend>std_msgs</depend>
+  <depend>tf</depend>
 
-  <export>
-  </export>
 </package>
