--- a/catkin_ws/src/cv_dice/config/ros.yaml
+++ b/catkin_ws/src/cv_dice/config/ros.yaml
@@ -25,3 +25,9 @@ publishers:
     topic: /darknet_ros/detection_image
     queue_size: 1
     latch: true
+
+image_view:
+
+  enable_opencv: true
+  wait_key_delay: 1
+  enable_console_output: true
