--- a/catkin_ws/src/cv_dice/package.xml
+++ b/catkin_ws/src/cv_dice/package.xml
@@ -49,6 +49,8 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <exec_depend>darknet_ros</exec_depend>
+  <exec_depend>cv</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
