included cv_dice into cv

--- a/catkin_ws/src/cv/CMakeLists.txt
+++ b/catkin_ws/src/cv/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   rospy
 )
-
+find_package(darknet_ros REQUIRED)
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
