--- a/catkin_ws/src/cv/package.xml
+++ b/catkin_ws/src/cv/package.xml
@@ -7,6 +7,7 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>darknet_ros</depend>
   <depend>geometry_msgs</depend>
   <depend>message_generation</depend>
   <depend>pointgrey_camera_driver</depend>
