Update planner mission listener topic; Include square task

--- a/catkin_ws/src/planner/config/sandbox.yaml
+++ b/catkin_ws/src/planner/config/sandbox.yaml
@@ -1,7 +1,5 @@
 tasks:
-  - name:  INITIALIZE  # name of the state     
+  - name:  INITIALIZE  # name of the state
     server: initialize_task  # name of the action server
-  - name: BUOY
-    server: buoy_task
-  - name: MANEUVER
-    server: maneuver_task
+  - name: SQUARE
+    server: square_task
