--- a/catkin_ws/src/cv/package.xml
+++ b/catkin_ws/src/cv/package.xml
@@ -3,15 +3,27 @@
   <name>cv</name>
   <version>0.0.0</version>
   <description>The cv package</description>
+
   <maintainer email="gabriel.downs@mail.mcgill.ca">Gabriel Downs</maintainer>
+
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>angles</depend>
+  <depend>auv_msgs</depend>
+  <depend>boost</depend>
+  <depend>cmake_modules</depend>
+  <depend>cv_bridge</depend>
   <depend>darknet_ros</depend>
+  <depend>eigen_conversions</depend>
   <depend>geometry_msgs</depend>
   <depend>message_generation</depend>
+  <depend>nav_msgs</depend>
   <depend>pointgrey_camera_driver</depend>
+  <depend>roscpp</depend>
+  <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>tf</depend>
+  <depend>tf_conversions</depend>
 
 </package>
