--- a/config/mux/auv.yml
+++ b/config/mux/auv.yml
@@ -28,3 +28,6 @@ windows:
     - hydrophones: roslaunch hydrophones hydrophones.launch --wait
     - auto_shutdown: rosrun status auto_shutdown
     - bag: /home/robotics/record.sh
+    - gui: 
+         - rosrun rospy_tutorials add_two_ints_server
+         - roslaunch gui gui.launch
