--- a/catkin_ws/src/gui/CMakeLists.txt
+++ b/catkin_ws/src/gui/CMakeLists.txt
@@ -7,7 +7,10 @@ project(gui)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+
+#Ensure a launch file is present.
+find_package(catkin REQUIRED COMPONENTS roslaunch)
+roslaunch_add_file_check(launch)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
