--- a/catkin_ws/src/gui/frontend/package.json
+++ b/catkin_ws/src/gui/frontend/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/roslib": "^0.18.3",
     "angular2-flash-messages": "^3.0.1",
     "core-js": "^2.4.1",
+    "roslib": "^1.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
