--- a/catkin_ws/src/gui/frontend/package.json
+++ b/catkin_ws/src/gui/frontend/package.json
@@ -24,6 +24,7 @@
     "@types/roslib": "^0.18.3",
     "angular2-flash-messages": "^3.0.1",
     "core-js": "^2.4.1",
+    "gulp-util": "^3.0.8",
     "roslib": "^1.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
