--- a/catkin_ws/src/gui/CMakeLists.txt
+++ b/catkin_ws/src/gui/CMakeLists.txt
@@ -8,9 +8,7 @@ project(gui)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 
-#Ensure a launch file is present.
-# find_package(catkin REQUIRED COMPONENTS roslaunch)
-# roslaunch_add_file_check(launch)
+find_package(catkin REQUIRED)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
