--- a/catkin_ws/src/controls/config/joystick.config.yaml
+++ b/catkin_ws/src/controls/config/joystick.config.yaml
@@ -2,14 +2,16 @@
 axis_linear:
     x: 1  # Forward/Back
     y: 0  # Left/Right
-
+    z: 3  # Up/Down
 scale_linear:
     x: 20
     y: 20
+    z: 20
 
 scale_linear_turbo:
     x: 1.5
     y: 1.5
+    z: 1.5
 
 axis_angular:
     yaw: 2  # Left/Right Twist
