--- a/catkin_ws/src/cv/package.xml
+++ b/catkin_ws/src/cv/package.xml
@@ -22,7 +22,7 @@
   <depend>message_generation</depend>
   <depend>message_runtime</depend>
   <depend>nav_msgs</depend>
-  <depend>pointgrey_camera_driver</depend>
+  <!--<depend>pointgrey_camera_driver</depend>-->
   <depend>roscpp</depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
